Plays with layout and columns, adds images folder and local files

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,13 @@
           box-sizing: border-box;
 }
 
+.background-image {
+  background-image: url("../styles/images/header.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 200px;
+}
+
 h1 {
   color: blue;
 }
